--- a/content/2015-05-22.md
+++ b/content/2015-05-22.md
@@ -17,6 +17,7 @@ Author: yong
 2004 经过深思熟虑 投入做platform，以及做了几年中国市场。
 雅虎中国也是yahoo在中国市场的尝试，那时的， 日本 中国政府，跟美国的市场完全不一样.
 投资中国还是美国完全不一样，主要是betting on people，有各种困难。当时yahoo一共就3bn现金，投在阿里巴巴就1个bn。
+他还扯到了一大堆要向前看的话，例如加入了cisco，hp的董事会，她说要是可以重新选的话，应该会接受Steve Jobs的邀请。
 <br>
 5前以前，中国的移动互联网还没有形成，今后二十年，热点应该还是在sv，应该是在其他领域比如生物和化学。
 杨致远自己也做invest，cloud和big data现在算热点。
